--- a/views/layouts/test.html
+++ b/views/layouts/test.html
@@ -6,14 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cocktail Heaven</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  {{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
+  <!-- {{!-- <link rel="stylesheet" href="/css/jass.css"> --}} -->
 </head>
 
 <body>
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="https://bulma.io">
-      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      <img src="../../public/images/COCKTAIL HEAVEN logo 2.png" width="112" height="28">
     </a>
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -36,7 +36,7 @@
   </div>
 
     
-  {{#if logged_in}}
+  <!-- {{#if logged_in}} -->
   <div class="navbar-end">
     <div class="navbar-item">
       <div class="buttons">
@@ -49,23 +49,22 @@
       </div>
     </div>
   </div>
-  {{/if}}
+  <!-- {{/if}} -->
 
 </nav>
+</header>
 
-
- 
-  </header>
+<img src="../../public/images/COCKTAIL HEAVEN logo.png" width = 100%>
   <main>
-    {{{ body }}}
+    <!-- {{{ body }}} -->
   </main>
   <footer>
       
   </footer>
 
-   {{#if logged_in}}
+   <!-- {{#if logged_in}} -->
   <script src="/js/logout.js"></script>
-  {{/if}}
+  <!-- {{/if}} -->
   
 </body>
 
