--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,61 +6,68 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cocktail Heaven</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   {{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
 </head>
 
 <body>
-<nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
-      <img src="/images/Cocktail Heaven Logo 2.png" width="112" height="28">
-    </a>
-
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
-
-  <div id="navbarBasicExample" class="navbar-menu">
-    <div class="navbar-start">
-      <a class="navbar-item" href="/">
-        Home
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+        <img src="/images/Cocktail Heaven Logo 2.png" width="112" height="28">
       </a>
 
-      <a class="navbar-item" href="/cocktails">
-        Cocktails
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
       </a>
+    </div>
 
-  </div>
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" href="/">
+          Home
+        </a>
 
-    
-  {{#if logged_in}}
-  <div class="navbar-end">
-    <div class="navbar-item">
-      <div class="buttons">
-        <a class="button is-primary" href="/profile">
+        <a class="navbar-item" href="/cocktails">
+          Cocktails
+        </a>
+
+    </div>
+
+  
+    {{#if logged_in}}
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="buttons">
+          <a class="button is-primary" href="/profile">
             <strong>Profile</strong>
-        </a>
-        <a class="button is-light" id="logout">
+          </a>
+          <a class="button is-light" id="logout">
           Logout
-        </a>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
-  {{/if}}
+    {{/if}}
 
-</nav>
+  </nav>
 
-
- 
-  </header>
   <main>
-    {{{ body }}}
+
+    <div class="container is-widescreen">
+  <div class="notification is-warning">
+    {{{ body }}} 
+  </div>
+</div>
+    
   </main>
+
+
   <footer>
-      
+      <h1 class=""
   </footer>
 
    {{#if logged_in}}
