--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
-<h2>Login</h2>
+<h1 class="title is-1">Title 1</h1>
 
-<form class="form login-form">
+<form class="card">
   <div class="form-group">
     <label for="email-login">email:</label>
     <input class="form-input" type="text" id="email-login" />
