Get Started formatting

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,7 +57,7 @@
 
   <main>
 
-    <div class="container is-widescreen">
+    <div class="columns is-centered">
   <div class="notification is-warning">
     {{{ body }}} 
   </div>
@@ -67,7 +67,7 @@
 
 
   <footer>
-      <h1 class=""
+      <h1 class=""></h1>
   </footer>
 
    {{#if logged_in}}
