--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cocktail Heaven</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  {{!-- <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> --}}
   {{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
 </head>
 
-<body>
-  <nav class="navbar" role="navigation" aria-label="main navigation">
+<body style="background-image: url('/images/COCKTAIL\ HEAVEN\ logo.png'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed; z-index:-4; height:100vh">
+  <nav style="background-color: rgba(0, 0, 0, 0)" class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="https://bulma.io">
-        <img src="/images/Cocktail Heaven Logo 2.png" width="112" height="28">
+      <a class="navbar-item">
+        <img src="/images/Cocktail Heaven Logo 2.png" width="224" height="60">
       </a>
 
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
@@ -27,13 +27,13 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" href="/">
+        <a class="navbar-item has-text-primary has-text-weight-bold" href="/">
           Home
         </a>
 
-        <a class="navbar-item" href="/cocktails">
+        {{!-- <a class="navbar-item has-text-primary has-text-weight-bold" href="/cocktails">
           Cocktails
-        </a>
+        </a> --}}
 
     </div>
 
@@ -58,8 +58,10 @@
   <main>
 
     <div class="columns is-centered">
-  <div class="notification is-warning">
-    {{{ body }}} 
+  
+  <div>
+
+      {{{ body }}} 
   </div>
 </div>
     
@@ -67,7 +69,7 @@
 
 
   <footer>
-      <h1 class=""></h1>
+      <h1 class="by legends, otherwise known as AlexCam Corporation"></h1>
   </footer>
 
    {{#if logged_in}}
