--- a/views/cocktail.handlebars
+++ b/views/cocktail.handlebars
@@ -2,7 +2,7 @@
   <div class="card-content">
   
   <p class="title is-3">{{name}}</p>
-  <p>{{{get_emoji category}}}</p>
+  <p class="title is-1" >{{{get_emoji category}}}</p>
   <h2 class="title is-5 mb-0">Description</h2>
   <p class="mb-3">{{description}}</p>
   <h2 class="title is-5 mb-0">Category</h2>
