--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,21 +1,24 @@
-<!-- Loop over each object in the projects array -->
-<section class="columns is-three-quarters p-6">
+<!-- Start of the columns container -->
+<section class="columns is-multiline p-6">
 
 {{#each cocktails as |cocktail| }}
-<div class="card p-4 m-3" style="background-color: rgba(255, 221, 87, 0.3)">
-  <div class="card content" style="background-color: rgba(255, 221, 87, 0.5)">
-    <h2 style="text-align:center" class="title is-1">{{{get_emoji category}}}</h2>
-    <h2 style="text-align:center" ><a class="p-4" href="/cocktail/{{cocktail.id}}">{{cocktail.name}}</a></h2>
-    <p class="p-4">Created by {{cocktail.user.name}} on {{format_date cocktail.date_created}}</p>
-  </div>
-  <div class="p-4">
-    <p>
-      {{cocktail.description}}
-      {{cocktail.category}}
-      {{cocktail.alcoholic}}
+  <!-- Each card will take up full width on mobile, and 1/3 of the width on tablet and larger screens -->
+  <div class="column is-full-mobile is-one-third-tablet">
+    <div class="card p-4 m-3" style="background-color: rgba(255, 221, 87, 0.3)">
+      <div class="card content" style="background-color: rgba(255, 221, 87, 0.5)">
+        <h2 style="text-align:center" class="title is-1">{{{get_emoji category}}}</h2>
+        <h2 style="text-align:center"><a class="p-4" href="/cocktail/{{cocktail.id}}">{{cocktail.name}}</a></h2>
+        <p class="p-4">Created by {{cocktail.user.name}} on {{format_date cocktail.date_created}}</p>
+      </div>
+      <div class="p-4">
+        <p>
+          {{cocktail.description}}
+          {{cocktail.category}}
+          {{cocktail.alcoholic}}
         </p>
+      </div>
+    </div>
   </div>
-</div>
 {{/each}}
 
 </section>
