--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -74,6 +74,7 @@
 
    {{#if logged_in}}
   <script src="/js/logout.js"></script>
+   <script src="/js/hamburger.js"></script>
   {{/if}}
   
 </body>
