added the font awesome icons to sign in and sign uP

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cocktail Heaven</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  {{!-- <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet"> --}}
-  {{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
 </head>
 
 <body style="background-image: url('/images/COCKTAIL\ HEAVEN\ logo.png'); background-size: cover; background-repeat: no-repeat; background-attachment: fixed; z-index:-4; height:100vh">
@@ -74,9 +73,9 @@
 
    {{#if logged_in}}
   <script src="/js/logout.js"></script>
-   <script src="/js/hamburger.js"></script>
+   
   {{/if}}
-  
+  <script src="/js/hamburger.js"></script>
 </body>
 
 </html>
