added route for POST cocktails, fixed profile.handlebars, and added ingredient++ button

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -41,6 +41,7 @@
 </div>
 
 
+<div class="divider is-warning title is-5">OR</div>
 {{!-- Signup --}}
   <div class="card $container-max-width" style="background-color: rgba(255, 221, 87, 0.5)">
     <h2 class="title is-2 p-4">Signup</h2>
