Sign up page styling

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,10 @@
 <div class="column is-half is-offset-one-quarter ">
 
-</div><h1 class="title is-1">Get Started - yeah yeah</h1>
+</div>
 
-  <div class="card $container-max-width mb-6" style="background-color: rgba(255, 221, 87, 0.5)">
+<h1 class="title is-1">Get Started - yeah yeah</h1>
+
+  <div class="card container-max-width mb-6" style="background-color: rgba(255, 221, 87, 0.5)">
     {{!-- Login --}}
     <h2 class="title is-2 p-4">Login</h2>
     <form class="form login-form card-content">
@@ -10,12 +12,12 @@
       <div class="field">
     <label class="title is-6">Email:</label>
     <div class="control has-icons-left has-icons-right">
-        <input id="email-login" class="input is-danger" type="email" placeholder="Email input" value="youremail@">
+        <input id="email-login" class="input is-success" type="email" placeholder="youremail@">
         <span class="icon is-small is-left">
           <i class="fas fa-envelope"></i>
         </span>
         <span class="icon is-small is-right">
-          <i class="fas fa-exclamation-triangle"></i>
+          <i class="fas fa-check"></i>
         </span>
     </div>
     <!-- <p class="help is-danger">This email is invalid</p> -->
@@ -42,6 +44,9 @@
 
 
 <div class="divider is-warning title is-5">OR</div>
+
+
+
 {{!-- Signup --}}
   <div class="card $container-max-width" style="background-color: rgba(255, 221, 87, 0.5)">
     <h2 class="title is-2 p-4">Signup</h2>
@@ -51,29 +56,29 @@
   <label class="label">Username</label>
 
   <div class="control has-icons-left has-icons-right">
-    <input id="username-signup" class="input is-success" type="text" placeholder="Text input" value="make a new username">
+    <input id="username-signup" class="input is-success" type="text" placeholder="make a new username">
     <span class="icon is-small is-left">
       <i class="fas fa-user"></i>
     </span>
     <span class="icon is-small is-right">
-      <i class="fas fa-check"></i>
+      <i id="username-signup-icon" class="fas fa-check"></i>
     </span>
   </div>
-  <p class="help is-success">This username is available</p>
+  <p id="username-signup-help" class="help"></p>
 </div>
 
 <div class="field">
   <label class="label">Email</label>
   <div class="control has-icons-left has-icons-right">
-    <input id="email-signup" class="input is-danger" type="email" placeholder="Email input" value="youremail@">
+    <input id="email-signup" class="input is-success" type="email" placeholder="youremail@">
     <span class="icon is-small is-left">
       <i class="fas fa-envelope"></i>
     </span>
     <span class="icon is-small is-right">
-      <i class="fas fa-exclamation-triangle"></i>
+      <i id="email-signup-icon" class="fas fa-check"></i>
     </span>
   </div>
-  <p class="help is-danger">This email is invalid</p>
+  <p id="email-signup-help" class="help"></p>
 </div>
 
 <div class="field">
