--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -94,11 +94,12 @@
 <div class="field">
   <div class="control">
     <label class="checkbox">
-      <input type="checkbox">
-      I agree to the <a href="#">terms and conditions</a>
+      <input type="checkbox" id="tC">
+      I agree to the <a href="/terms-and-conditions">terms and conditions</a>
     </label>
   </div>
 </div>
+
 
 
 <div class="field is-grouped">
